--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,8 @@ dependencies {
     implementation project(':react-native-sensors')
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation('com.google.android.gms:play-services-plus:17.0.0')
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'com.google.firebase:firebase-dynamic-links'
     implementation 'com.google.android.gms:play-services-identity:18.0.1'
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
     if (hermesEnabled.toBoolean()) {
