--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.10.2",
+    "react-native-get-location": "^4.0.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-loader-kit": "^2.0.5",
