food UI home page done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -111,8 +111,7 @@
     <!-- Optional permissions -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-feature android:name="android.hardware.camera" />
@@ -144,6 +143,8 @@
         android:windowSoftInputMode="adjustResize"
         android:screenOrientation="portrait"
         android:showWhenLocked="true"
+        android:resizeableActivity="true"
+        android:supportsPictureInPicture="true"
         android:turnScreenOn="true"
         android:exported="true">
         <intent-filter tools:ignore="AppLinkUrlError">
