--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MapiLocator",
-  "version": "1.2.50",
+  "version": "1.2.52",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -61,6 +61,7 @@
     "react-native-get-location": "^4.0.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-loader-kit": "^2.0.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-location": "^2.5.0",
@@ -83,10 +84,12 @@
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-ratings": "^8.1.0",
     "react-native-razorpay": "^2.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-sensors": "^7.3.6",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-store-version": "^1.4.1",
     "react-native-svg": "^13.10.0",
     "react-native-swiper": "^1.6.0",
