--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MapiLocator",
-  "version": "1.2.53",
+  "version": "1.2.54",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -37,6 +37,7 @@
     "appcenter-analytics": "4.4.5",
     "appcenter-crashes": "4.4.5",
     "axios": "^1.4.0",
+    "base-64": "^1.0.0",
     "expo-location": "^15.1.1",
     "expo-task-manager": "^11.1.1",
     "geolib": "^3.3.4",
@@ -60,6 +61,7 @@
     "react-native-gesture-handler": "^2.10.2",
     "react-native-get-location": "^4.0.1",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-htmlview": "^0.17.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-loader-kit": "^2.0.5",
@@ -85,10 +87,12 @@
     "react-native-ratings": "^8.1.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-sensors": "^7.3.6",
+    "react-native-shimmer": "^0.6.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-store-version": "^1.4.1",
     "react-native-svg": "^13.10.0",
