--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MapiLocator",
-  "version": "1.2.54",
+  "version": "1.2.55",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -53,6 +53,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-device-info": "^10.11.0",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.1",
     "react-native-geocoder": "^0.5.0",
